tests/NormalTests/paczka1/fuzzy1/11386593.err
Error in line 5: yEPetTbV S842 77,0
Error in line 19: S141 S276 54,79
Error in line 22: S141 S276 232,2
Error in line 37: qDU A203 83,8
